@@ -1725,3 +1725,4 @@ demônio
 deixa-me
 dedo
 criou
+machado
